clusters/sserver/gotify/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotify
  namespace: gotify
  labels:
    app: gotify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gotify
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gotify
    spec:
      containers:
        - image: gotify/server:2.1.3
          name: gotify
          ports:
            - containerPort: 8069
              name: gotify
          volumeMounts:
            - mountPath: /app/data
              name: data
      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: gotify-data
status: {}
