clusters/sserver/gotify/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotify
  namespace: gotify
spec:
  ports:
    - name: gotify
      port: 8069
      targetPort: 8069
  selector:
    app: gotify
status:
  loadBalancer: {}
