clusters/sserver/gotify/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: gotify
  name: gotify
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - "gotify.ssene.ca"
    secretName: "gotify-tls-cert"
  rules:
  - host: "gotify.ssene.ca"
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: "gotify"
              port:
                number: 8069
